force-app/main/default/objects/Client_Meeting__c/fields/Is_there_an_internal_issue__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_internal_issue__c</fullName>
    <label>Is there an internal issue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>