force-app/main/default/objects/Client_Meeting__c/fields/Issues_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Issues_Concerns__c</fullName>
    <label>Issues/Concerns</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>