force-app/main/default/objects/Client_Meeting__c/fields/Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>Items_Completed__c</fullName>
    <label>Items Completed</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>