force-app/main/default/objects/Client_Meeting__c/fields/Items_to_be_Done_Next_Month_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Items_to_be_Done_Next_Month_Meeting__c</fullName>
    <label>Items to be Done Next Month/Meeting</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>