force-app/main/default/objects/Client_Meeting__c/fields/KDM_s_Identified__c.field-meta.xml
<CustomField>
    <fullName>KDM_s_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KDM&apos;s Identified</label>
    <type>Checkbox</type>
</CustomField>