force-app/main/default/objects/Client_Meeting__c/fields/Keyword_Rankings_and_Growth__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Rankings_and_Growth__c</fullName>
    <label>Keyword Rankings and Growth</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>