force-app/main/default/objects/Client_Meeting__c/fields/Last_Meeting_Action_Items_Client__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Action_Items_Client__c</fullName>
    <label>Last Meeting Action Items Client</label>
    <length>6000</length>
    <type>Html</type>
</CustomField>