force-app/main/default/objects/Client_Meeting__c/fields/Last_Meeting_POM_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_POM_Action_Items__c</fullName>
    <label>Last Meeting POM Action Items</label>
    <length>6000</length>
    <type>Html</type>
</CustomField>