force-app/main/default/objects/Client_Meeting__c/fields/Last_Meeting_PSM_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_PSM_Action_Items__c</fullName>
    <label>Last Meeting Account Owner Action Items</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>