force-app/main/default/objects/Client_Meeting__c/fields/Last_Month_Action_Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Action_Items_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Month’s Commitments</label>
    <type>Checkbox</type>
</CustomField>