force-app/main/default/objects/Client_Meeting__c/fields/Last_Month_s_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_s_Action_Items__c</fullName>
    <label>Last Month&apos;s Action Items</label>
    <length>6000</length>
    <type>Html</type>
</CustomField>