force-app/main/default/objects/Client_Meeting__c/fields/Last_Week_Task_2_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Last_Week_Task_2_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Week Task 2 Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Meetings6</relationshipName>
    <type>Lookup</type>
</CustomField>