force-app/main/default/objects/Client_Meeting__c/fields/Last_Week_Task_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Week_Task_3__c</fullName>
    <label>Last Week Task 3</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>