force-app/main/default/objects/Client_Meeting__c/fields/Leads_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Leads_in_Process__c</fullName>
    <label>Leads in Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>