force-app/main/default/objects/Client_Meeting__c/fields/Lifetime_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Partnership__c</fullName>
    <label>Lifetime Partnership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>