force-app/main/default/objects/Client_Meeting__c/fields/Lifetime_Partnership_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Partnership_Explanation__c</fullName>
    <label>Lifetime Partnership Explanation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>