force-app/main/default/objects/Client_Meeting__c/fields/List_Changes__c.field-meta.xml
<CustomField>
    <fullName>List_Changes__c</fullName>
    <label>List Changes?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>