force-app/main/default/objects/Client_Meeting__c/fields/List_Notes__c.field-meta.xml
<CustomField>
    <fullName>List_Notes__c</fullName>
    <label>List Notes</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>