force-app/main/default/objects/Client_Meeting__c/fields/Lost_Leads__c.field-meta.xml
<CustomField>
    <fullName>Lost_Leads__c</fullName>
    <label>Lost Leads</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>