force-app/main/default/objects/Client_Meeting__c/fields/Marketing_Asset_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Asset_Notes__c</fullName>
    <label>Marketing Asset Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>