force-app/main/default/objects/Client_Meeting__c/fields/Marketing_Assets__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Review new marketing assets created, get information for the creation of the next marketing asset, review due dates and status on delivery.</inlineHelpText>
    <label>Marketing Assets</label>
    <type>Checkbox</type>
</CustomField>