force-app/main/default/objects/Client_Meeting__c/fields/Marketing_Assets_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assets_Review_Notes__c</fullName>
    <inlineHelpText>Filling this out will prevent you from completing your MRM if the account doesn&apos;t have a Marketing Manager listed on the account page. Filling this out creates a case for the account&apos;s marketing manager.</inlineHelpText>
    <label>Marketing Collateral Review Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>