force-app/main/default/objects/Client_Meeting__c/fields/Marketing_Collateral_Link__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Collateral_Link__c</fullName>
    <label>Marketing Collateral Link</label>
    <type>Url</type>
</CustomField>