force-app/main/default/objects/Client_Meeting__c/fields/Marketing_Collateral_Manager__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Collateral_Manager__c</fullName>
    <formula>Account__r.Outbound_Asset_Manager__r.FirstName + &apos; &apos; + Account__r.Outbound_Asset_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Collateral Manager</label>
    <type>Text</type>
</CustomField>