force-app/main/default/objects/Client_Meeting__c/fields/Marketing_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager_Notes__c</fullName>
    <label>Marketing Manager Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>