force-app/main/default/objects/Client_Meeting__c/fields/Marketing_Materials__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Materials__c</fullName>
    <label>Marketing Materials</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>