force-app/main/default/objects/Client_Meeting__c/fields/Meeting_Completed__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Completed__c</fullName>
    <formula>IF(AND(Copywriter_Present__c&lt;&gt;NULL,ISPICKVAL(Status__c,&quot;COMPLETED&quot;)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Completed</label>
    <type>Checkbox</type>
</CustomField>