force-app/main/default/objects/Client_Meeting__c/fields/Meeting_Held_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held_Date__c</fullName>
    <label>Meeting Held Date</label>
    <type>Date</type>
</CustomField>