force-app/main/default/objects/Client_Meeting__c/fields/Meeting_Held_With__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held_With__c</fullName>
    <inlineHelpText>List individuals that were on the call</inlineHelpText>
    <label>Meeting Held With</label>
    <type>TextArea</type>
</CustomField>