force-app/main/default/objects/Client_Meeting__c/fields/Meeting_Prepped__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Prepped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Prepped</label>
    <type>Checkbox</type>
</CustomField>