force-app/main/default/objects/Client_Meeting__c/fields/Meeting_Pushed__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Pushed__c</fullName>
    <description>The box will be checked if the meeting scheduled date doesn&apos;t equal meeting held date.</description>
    <formula>IF(OR( Meeting_Rescheduled_For__c&lt; Meeting_Held_Date__c ,Meeting_Scheduled_For__c &lt; Meeting_Held_Date__c ),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Pushed</label>
    <type>Checkbox</type>
</CustomField>