force-app/main/default/objects/Client_Meeting__c/fields/Meeting_Rescheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Rescheduled_For__c</fullName>
    <description>Used to track if a meeting is rescheduled</description>
    <label>Meeting Rescheduled For</label>
    <type>Date</type>
</CustomField>