force-app/main/default/objects/Client_Meeting__c/fields/Meeting_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Scheduled_For__c</fullName>
    <inlineHelpText>This is the date that the original meeting is scheduled for</inlineHelpText>
    <label>Meeting Scheduled For</label>
    <type>Date</type>
</CustomField>