force-app/main/default/objects/Client_Meeting__c/fields/Meetings__c.field-meta.xml
<CustomField>
    <fullName>Meetings__c</fullName>
    <description>Used on Sapper Consulting MRM to document client&apos;s meetings.</description>
    <label>Meetings</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>