force-app/main/default/objects/Client_Meeting__c/fields/Memorable_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Memorable_Appointment__c</fullName>
    <label>Memorable Appointment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>