force-app/main/default/objects/Client_Meeting__c/fields/Mid_Month_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Mid_Month_Meeting_Date__c</fullName>
    <inlineHelpText>Agency Only</inlineHelpText>
    <label>Mid-Month Meeting Date</label>
    <type>Date</type>
</CustomField>