force-app/main/default/objects/Client_Meeting__c/fields/Miscellaneous_Notes__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Notes__c</fullName>
    <label>Miscellaneous Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>