force-app/main/default/objects/Client_Meeting__c/fields/Month_End_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Meeting_Date__c</fullName>
    <label>Month End Meeting Date</label>
    <type>Date</type>
</CustomField>