force-app/main/default/objects/Client_Meeting__c/fields/Monthly_Results_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Results_Meeting__c</fullName>
    <description>Used on Sapper Consulting Implementation Wrap Up</description>
    <label>Monthly Results Meeting</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>