force-app/main/default/objects/Client_Meeting__c/fields/Monthly_Results_Notes__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Results_Notes__c</fullName>
    <label>Monthly Results Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>