force-app/main/default/objects/Client_Meeting__c/fields/My_Voice__c.field-meta.xml
<CustomField>
    <fullName>My_Voice__c</fullName>
    <label>My Voice</label>
    <length>12000</length>
    <type>Html</type>
</CustomField>