force-app/main/default/objects/Client_Meeting__c/fields/New_Info_for_Enhanced_Performance__c.field-meta.xml
<CustomField>
    <fullName>New_Info_for_Enhanced_Performance__c</fullName>
    <inlineHelpText>Are there and market conditions industry changes or product enhancements that will help with performance?</inlineHelpText>
    <label>New Info for Enhanced Performance</label>
    <length>8000</length>
    <type>Html</type>
</CustomField>