force-app/main/default/objects/Client_Meeting__c/fields/New_Information__c.field-meta.xml
<CustomField>
    <fullName>New_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Information</label>
    <type>Checkbox</type>
</CustomField>