force-app/main/default/objects/Client_Meeting__c/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <label>New Product</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>