force-app/main/default/objects/Client_Meeting__c/fields/New_Topics_and_Product_Enhancements__c.field-meta.xml
<CustomField>
    <fullName>New_Topics_and_Product_Enhancements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Topics and Product Enhancements</label>
    <type>Checkbox</type>
</CustomField>