force-app/main/default/objects/Client_Meeting__c/fields/Next_Meeting_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Meeting_Date_Time__c</fullName>
    <inlineHelpText>The date of the next month&apos;s MRM</inlineHelpText>
    <label>Next Meeting Date/Time</label>
    <type>DateTime</type>
</CustomField>