force-app/main/default/objects/Client_Meeting__c/fields/Non_Social_Media_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Non_Social_Media_Explanation__c</fullName>
    <label>Non-Social Media Explanation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>