force-app/main/default/objects/Client_Meeting__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>