force-app/main/default/objects/Client_Meeting__c/fields/Number_1_Importance_of_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Number_1_Importance_of_Partnership__c</fullName>
    <label>Number 1 Importance of Partnership?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>