force-app/main/default/objects/Client_Meeting__c/fields/Nurture_Activity__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nurture Activity</label>
    <type>Checkbox</type>
</CustomField>