force-app/main/default/objects/Client_Meeting__c/fields/Nurture_Review__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Calls Made, Live Connects, Closing Ratios, Emails Sent, Results, Warm Leads w/follow up call dates</inlineHelpText>
    <label>Nurture Review</label>
    <type>Checkbox</type>
</CustomField>