force-app/main/default/objects/Client_Meeting__c/fields/of_Appointments_for_Client__c.field-meta.xml
<CustomField>
    <fullName>of_Appointments_for_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label># of Appointments for Client</label>
    <type>Checkbox</type>
</CustomField>