force-app/main/default/objects/Client_Meeting__c/fields/Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>Open_Balance__c</fullName>
    <formula>Account__r.Open_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>