force-app/main/default/objects/Client_Meeting__c/fields/Operation_Action_Items_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Operation_Action_Items_This_Week__c</fullName>
    <label>Operation Action Items This Week</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>