force-app/main/default/objects/Client_Meeting__c/fields/Operations_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Operations_Action_Items__c</fullName>
    <label>Operations Action Items</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>