force-app/main/default/objects/Client_Meeting__c/fields/Operations_Manager_Case_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager_Case_Due_Date__c</fullName>
    <label>Operations Manager Case Due Date</label>
    <type>Date</type>
</CustomField>