force-app/main/default/objects/Client_Meeting__c/fields/Operations_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager_Notes__c</fullName>
    <label>Operations Manager Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>