force-app/main/default/objects/Client_Meeting__c/fields/Operations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operations_Notes__c</fullName>
    <label>Operations Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>