force-app/main/default/objects/Client_Meeting__c/fields/Opportunities_Possible_Response__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Possible_Response__c</fullName>
    <label>Opportunities Possible Response</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong KDM’s</fullName>
            </value>
            <value>
                <fullName>Wrong Companies</fullName>
            </value>
            <value>
                <fullName>No reoccurring revenue</fullName>
            </value>
            <value>
                <fullName>Is it a timing issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>