force-app/main/default/objects/Client_Meeting__c/fields/Our_Pipeline_Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Our_Pipeline_Marketing_Activity__c</fullName>
    <label>Our Pipeline/Marketing Activity</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>