force-app/main/default/objects/Client_Meeting__c/fields/Overall_Abstrakt_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Abstrakt_Satisfaction__c</fullName>
    <description>CFS: Overall, how satisfied are you with Abstrakt?</description>
    <inlineHelpText>CFS: Overall, how satisfied are you with Abstrakt?</inlineHelpText>
    <label>Overall Abstrakt Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#FF0000</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#FF9900</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FFFF66</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#33FF33</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#009900</color>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>