force-app/main/default/objects/Client_Meeting__c/fields/Overall_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction__c</fullName>
    <label>Overall Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Not Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>