force-app/main/default/objects/Client_Meeting__c/fields/Overall_Satisfaction_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_Reasoning__c</fullName>
    <label>Overall Satisfaction Reasoning</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>