force-app/main/default/objects/Client_Meeting__c/fields/Overcome_objections__c.field-meta.xml
<CustomField>
    <fullName>Overcome_objections__c</fullName>
    <label>Overcome objections?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>