force-app/main/default/objects/Client_Meeting__c/fields/Partner_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>