force-app/main/default/objects/Client_Meeting__c/fields/Partner_Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Notes__c</fullName>
    <label>Partner Sales Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>