force-app/main/default/objects/Client_Meeting__c/fields/Partner_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Meetings9</relationshipName>
    <type>Lookup</type>
</CustomField>