force-app/main/default/objects/Client_Meeting__c/fields/Partner_Update__c.field-meta.xml
<CustomField>
    <fullName>Partner_Update__c</fullName>
    <inlineHelpText>What’s something new going on with your business?</inlineHelpText>
    <label>Client Update</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>