force-app/main/default/objects/Client_Meeting__c/fields/Path_to_Better_Score__c.field-meta.xml
<CustomField>
    <fullName>Path_to_Better_Score__c</fullName>
    <inlineHelpText>These are the action items to improve the score</inlineHelpText>
    <label>Path to Better Score</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>