force-app/main/default/objects/Client_Meeting__c/fields/Payment_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Payment_Expectations__c</fullName>
    <label>Payment Expectations</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>