force-app/main/default/objects/Client_Meeting__c/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <label>Payment Notes</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>