force-app/main/default/objects/Client_Meeting__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH (AMG Pull)</fullName>
            </value>
            <value>
                <fullName>ACH (Client Push)</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Credit Card 3%</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plastiq (Client Push)</fullName>
            </value>
            <value>
                <fullName>Wire (Client Push)</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
                <isActive>false</isActive>
                <label>ACH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>