force-app/main/default/objects/Client_Meeting__c/fields/Performance_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Performance_Guarantees__c</fullName>
    <label>Performance Guarantees</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>