force-app/main/default/objects/Client_Meeting__c/fields/Pipeline_Progress_over_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Progress_over_Last_Month__c</fullName>
    <label>Progress toward Definition of Success</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>