force-app/main/default/objects/Client_Meeting__c/fields/Pitch__c.field-meta.xml
<CustomField>
    <fullName>Pitch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pitch %</label>
    <type>Checkbox</type>
</CustomField>