force-app/main/default/objects/Client_Meeting__c/fields/Pitch_PSM_Graded__c.field-meta.xml
<CustomField>
    <fullName>Pitch_PSM_Graded__c</fullName>
    <label>Pitch PSM Graded</label>
    <type>TextArea</type>
</CustomField>