force-app/main/default/objects/Client_Meeting__c/fields/POA__c.field-meta.xml
<CustomField>
    <fullName>POA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Operations Analyst (Operations Manager)</description>
    <label>POA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Meetings0irs</relationshipName>
    <type>Lookup</type>
</CustomField>