force-app/main/default/objects/Client_Meeting__c/fields/Portal_Demo__c.field-meta.xml
<CustomField>
    <fullName>Portal_Demo__c</fullName>
    <label>Portal Demo</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>