force-app/main/default/objects/Client_Meeting__c/fields/Portal_Demo_Notes__c.field-meta.xml
<CustomField>
    <fullName>Portal_Demo_Notes__c</fullName>
    <label>Portal Demo Notes</label>
    <length>11000</length>
    <type>Html</type>
</CustomField>