force-app/main/default/objects/Client_Meeting__c/fields/Potential_Business_Issues__c.field-meta.xml
<CustomField>
    <fullName>Potential_Business_Issues__c</fullName>
    <label>Potential Business Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash-flow/Finances</fullName>
            </value>
            <value>
                <fullName>Low client retention</fullName>
            </value>
            <value>
                <fullName>Not decision maker</fullName>
            </value>
            <value>
                <fullName>Other business risk</fullName>
            </value>
            <value>
                <fullName>Selling the business/Merger</fullName>
            </value>
            <value>
                <fullName>Staffing Issues/Lack of Resources</fullName>
            </value>
            <value>
                <fullName>Uncollected AR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>