force-app/main/default/objects/Client_Meeting__c/fields/Potential_Business_Issues_Details__c.field-meta.xml
<CustomField>
    <fullName>Potential_Business_Issues_Details__c</fullName>
    <label>Potential Business Issues Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>