force-app/main/default/objects/Client_Meeting__c/fields/Preferred_Resources__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Resources__c</fullName>
    <label>Preferred Resources</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>