force-app/main/default/objects/Client_Meeting__c/fields/Previous_Month_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_s_Notes__c</fullName>
    <label>Previous Month&apos;s Notes</label>
    <length>60000</length>
    <type>Html</type>
</CustomField>