force-app/main/default/objects/Client_Meeting__c/fields/Professionalism_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Explanation__c</fullName>
    <label>Professionalism Explanation</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>